--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
 /* declare it */
 :root {
   --red-color: #c7390d;
+  --white-color: #ffffff;
 }
 
 /* use it */
@@ -10,4 +12,20 @@
 }
 .border-color {
   border: 1px solid var(--red-color);
+}
+.red-hat-text {
+  font-family: 'Red Hat Text', sans-serif;
+}
+.button-color {
+  color: var(--red-color);
+}
+.white-button-color {
+  color: var(--white-color);
+  border: 1px solid var(--white-color);
+}
+.red-button-color {
+  color: var(--red-color);
+}
+.white-bg {
+  background-color: var(--white-color);
 }
