--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   --rose-color-500: #7d5c53;
   --rose-color-900: #261009;
 }
+.rose-border {
+  border-bottom: 0.5px solid var(--rose-color-100);
+}
 .rose-color-900 {
   color: var(--rose-color-900);
 }
@@ -22,6 +25,9 @@
 }
 .rose-color-400 {
   color: var(--rose-color-400);
+}
+.rose-color-500 {
+  color: var(--rose-color-500);
 }
 .rose-bgcolor-50 {
   background-color: var(--rose-color-50);
@@ -40,6 +46,10 @@
 .white-button-color {
   color: var(--white-color);
   border: 1px solid var(--white-color);
+}
+.remove-button-color {
+  color: var(--rose-color-300);
+  border: 1px solid var(--rose-color-300);
 }
 .white-text {
   color: var(--white-color);
